<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="81dip"
    android:layout_alignParentBottom="true"
    android:clickable="true"
    android:background="@drawable/bottomshdowbar">
    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:textSize="@dimen/sp_12"
        android:text="@string/home"
        android:layout_marginLeft="82dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"/>
    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:textSize="@dimen/sp_12"
        android:text="@string/brand"
        android:layout_toRightOf="@id/home_text"
        android:layout_marginLeft="170dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:textSize="@dimen/sp_12"
        android:text="@string/category"
        android:layout_toRightOf="@+id/brand_text"
        android:layout_marginLeft="168dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal"
        android:textSize="@dimen/sp_12"
        android:text="@string/shopcart"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"/>
    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dip"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/home_icon" />
    <ImageButton
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/home"
        android:layout_marginLeft="144dip"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/brand_icon" />
    <ImageButton
        android:id="@+id/cate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/brand"
        android:layout_marginLeft="144dip"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/cate_icon" />
    <ImageButton
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_toRightOf="@+id/cate"
        android:layout_marginLeft="78dip"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/tabbottom_scan_selector" />
    <ImageButton
        android:id="@+id/shopcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="68dip"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/shopcart_icon" />
</RelativeLayout>
