<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pricedef_wrap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:paddingTop="@dimen/dp_18"
    android:paddingLeft="@dimen/dp_20">
    <TextView
        android:id="@+id/pricedef_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        android:textColor="#363636"
        android:text="@string/price_def"/>
    <ImageView
        android:id="@+id/selected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pricedef_title"
        android:layout_marginTop="@dimen/dp_6"
        android:background="@drawable/chosenimg" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pricedef_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10">
        <EditText
            android:id="@+id/pricedef_min"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_edit_pricedef"
            android:textColor="@color/normal"
            android:textSize="@dimen/sp_15"
            android:paddingLeft="@dimen/dp_4"
            android:hint="@string/price_min"
            android:textColorHint="@color/delight"
            android:inputType="number"
            />
        <TextView
            android:id="@+id/split"
            android:layout_width="@dimen/dp_20"
            android:layout_height="1dp"
            android:background="@color/delight"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/pricedef_min"
            android:layout_marginLeft="@dimen/dp_10"/>
        <EditText
            android:id="@+id/pricedef_max"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:paddingLeft="@dimen/dp_4"
            android:layout_toRightOf="@+id/split"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/shape_edit_pricedef"
            android:textColor="@color/normal"
            android:textSize="@dimen/sp_15"
            android:hint="@string/price_max"
            android:textColorHint="@color/delight"
            android:inputType="number"/>
    </RelativeLayout>
</RelativeLayout>