<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#f2f2f2"
    android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/topbarheight"
            android:background="@drawable/topbar">

        <ImageButton
                android:id="@+id/button_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"/>

        <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="21sp"
                android:text="销售主页"
                android:textColor="#333333"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_below="@+id/header"
            android:layout_marginTop="15dip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="#ffffff">

        <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="20dip"
                android:textSize="22sp"
                android:text="免税额度查询"
                android:textColor="#c28d56"/>

        <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginLeft="30dip"
                android:layout_marginTop="30dip"
                android:layout_below="@+id/title1"
                android:text="身份证号:"
                android:textColor="#666666"/>

        <EditText
                android:id="@+id/card"
                android:layout_toRightOf="@+id/title2"
                android:layout_marginTop="25dip"
                android:background="@drawable/edit_shape"
                android:layout_below="@+id/title1"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="20dip"
                android:layout_height="43dp"
                android:layout_width="490dip"
                android:layout_weight="1"
                android:hint=" 输入顾客身份证号"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <Button android:id="@+id/serch"
                android:layout_width="match_parent"
                android:layout_height="43dip"
                android:layout_below="@+id/title1"
                android:background="@drawable/button_corner"
                android:text="查询"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_marginTop="25dip"
                android:layout_toRightOf="@+id/card"
                android:layout_marginRight="14dip"
                android:layout_marginLeft="10dip"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_below="@+id/search"
            android:layout_marginTop="15dip"
            android:background="#ffffff">

        <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginLeft="30dip"
                android:layout_centerVertical="true"
                android:text="查看限购条件"
                android:textColor="#c28d56"/>

        <ImageButton
                android:id="@+id/buttontosee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonsaler"
                android:layout_marginRight="30dip"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dip"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/bindcode_wrap"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/condition"
        android:orientation="vertical"
        android:background="@color/ffffff"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_privilege_code"
            android:textSize="22sp"
            android:textColor="#c28d56"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:text="@string/privilege_code"
                android:layout_weight="1"
                android:textColor="#666666"/>
            <com.hhyg.TyClosing.ui.view.AutoClearEditText
                android:id="@+id/privilege_code_edit"
                android:layout_width="1dip"
                android:layout_height="43dp"
                android:background="@drawable/edit_shape"
                android:maxLines="1"
                android:hint="@string/privilege_inputcode"
                android:layout_weight="5"/>
            <Button
                android:id="@+id/bindprivelege_btn"
                android:layout_width="1dip"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/bind"
                android:textSize="22sp"
                android:background="@drawable/button_corner_selector"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/privilege_info_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/condition"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:background="#f2f2f2">
    <LinearLayout
        android:layout_width="1dp"
        android:layout_weight="6"
        android:layout_height="wrap_content"
        android:background="@drawable/privilege_shape"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/privilegeinfo_bg"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp">
                <TextView
                    android:id="@+id/privilege_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:shadowColor="#FF000000"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="3"
                    android:textColor="@color/ffffff"
                    />
                <TextView
                    android:id="@+id/discount_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/ffffff"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="7dp">
            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#333333"
                />
            <TextView
                android:id="@+id/spilt"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999999"
                android:layout_below="@id/time_tv"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/privilege_goods"
                android:layout_alignParentRight="true"
                android:text="@string/privilege_good"
                android:textColor="@color/privile_color"
                android:textSize="15sp"
                android:background="@color/ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/fix_tital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spilt"
                android:layout_marginTop="10dp"
                android:textColor="#999999"
                android:text="@string/detail_desc"/>
            <TextView
                android:id="@+id/detail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:layout_below="@+id/fix_tital"/>
        </RelativeLayout>
    </LinearLayout>
        <Button
            android:id="@+id/cancel_bind_btn"
            android:layout_width="1dip"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_bind"
            android:textSize="22sp"
            android:background="@drawable/button_corner_selector"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:text="退出账户"
            android:textSize="22sp"
            android:background="@drawable/button_corner"
            android:textColor="#ffffff"
            android:layout_marginBottom="30dip"
            android:layout_marginRight="20dip"
            android:layout_marginLeft="20dip"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="250dip"
            android:background="@drawable/salerbg"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentLeft="true">

        <ImageButton
                android:id="@+id/headerimage"
                android:layout_width="120dip"
                android:layout_height="120dip"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:layout_marginTop="20dip"/>

        <TextView
                android:id="@+id/headertitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dip"
                android:layout_below="@+id/headerimage"
                android:textSize="21sp"
                android:text="销售主页"
                android:textColor="#c28d56"
                />
    </RelativeLayout>
</RelativeLayout>